# fine-types

./: .gitignore  Language-FineTypes-Commands-Check-PrettyPrinter.html  Language-FineTypes-Commands-Check.html  Language-FineTypes-Commands-Common.html  Language-FineTypes-Commands-Convert-Haskell-Cabal.html  Language-FineTypes-Commands-Convert.html  Language-FineTypes-Commands-Lint.html  Language-FineTypes-Commands-Log.html  Language-FineTypes-Documentation-Gen.html  Language-FineTypes-Documentation-Parser.html  Language-FineTypes-Documentation.html  Language-FineTypes-Export-Haskell-Language.html  Language-FineTypes-Export-Haskell-Typ.html  Language-FineTypes-Export-Haskell-Value-Compiletime.html  Language-FineTypes-Export-Haskell-Value-Runtime.html  Language-FineTypes-Export-OpenAPI-Schema.html  Language-FineTypes-Export-OpenAPI-Typ.html  Language-FineTypes-Export-OpenAPI-Value-FromJSON.html  Language-FineTypes-Export-OpenAPI-Value-ToJSON.html  Language-FineTypes-Export-OpenAPI-Value.html  Language-FineTypes-Module-Gen.html  Language-FineTypes-Module-Parser.html  Language-FineTypes-Module-PrettyPrinter.html  Language-FineTypes-Module.html  Language-FineTypes-Package.html  Language-FineTypes-Parser-Common.html  Language-FineTypes-Parser-Lexer.html  Language-FineTypes-Parser-Types.html  Language-FineTypes-Parser.html  Language-FineTypes-Signature-Gen.html  Language-FineTypes-Signature-Parser.html  Language-FineTypes-Signature-PrettyPrinter.html  Language-FineTypes-Signature.html  Language-FineTypes-Typ-Gen.html  Language-FineTypes-Typ-Parser.html  Language-FineTypes-Typ-PrettyPrinter.html  Language-FineTypes-Typ.html  Language-FineTypes-Value-Gen.html  Language-FineTypes-Value.html  Language-FineTypes.html  (+34 more)
.buildkite/: check-agda.sh  (+1 more)
lib/deposit-wallet-mock/: Setup.hs  deposit-wallet-mock.cabal
lib/deposit-wallet-mock/exe/: deposit-wallet.hs
lib/deposit-wallet-mock/src/Cardano/Wallet/Deposit/: HTTP.hs
lib/deposit-wallet-mock/src/Servant/: FineTypes.hs
lib/fine-types/: CHANGELOG.md  fine-types.cabal
lib/fine-types-core/: CHANGELOG.md  README.md  fine-types-core.agda-lib  fine-types-core.cabal  generate-haskell.sh
lib/fine-types-core/src/agda/Data/: Embedding.agda
lib/fine-types-core/src/agda/Language/: FineTypes.agda
lib/fine-types-core/src/agda/Language/FineTypes/: Embedding.agda  Typ.agda  Value.agda
lib/fine-types-core/src/agda/Language/FineTypes/Value/: Def.agda  Typcheck.agda
lib/fine-types-core/src/haskell/Data/: Embedding.hs
lib/fine-types-core/src/haskell/Language/: FineTypes.hs
lib/fine-types-core/src/haskell/Language/FineTypes/: Embedding.hs  Typ.hs
lib/fine-types-core/src/haskell/Language/FineTypes/Value/: Def.hs
lib/fine-types/app/: Main.hs  Options.hs
lib/fine-types/app/Commands/: Check.hs  Common.hs  Convert.hs  Lint.hs  Log.hs
lib/fine-types/app/Commands/Check/: PrettyPrinter.hs
lib/fine-types/app/Options/: Check.hs  Common.hs  Convert.hs  Lint.hs  Log.hs
lib/fine-types/src/Language/: FineTypes.hs
lib/fine-types/src/Language/FineTypes/: Documentation.hs  Elaborate.hs  Embedding.hs  Module.hs  Package.hs  Parser.hs  Signature.hs  ToExpr.hs  Typ.hs  Value.hs
lib/fine-types/src/Language/FineTypes/Commands/: Check.hs  Common.hs  Convert.hs  Lint.hs  Log.hs
lib/fine-types/src/Language/FineTypes/Commands/Check/: PrettyPrinter.hs
lib/fine-types/src/Language/FineTypes/Documentation/: Gen.hs  Parser.hs
lib/fine-types/src/Language/FineTypes/Export/Haskell/: Language.hs  Typ.hs
lib/fine-types/src/Language/FineTypes/Export/OpenAPI/: Schema.hs  Typ.hs  Value.hs
lib/fine-types/src/Language/FineTypes/Module/: Gen.hs  Graph.hs  Identity.hs  Instance.hs  Parser.hs  PrettyPrinter.hs
lib/fine-types/src/Language/FineTypes/Package/: Compile.hs  Content.hs  Description.hs  Parser.hs  PrettyPrinter.hs
lib/fine-types/src/Language/FineTypes/Parser/: Common.hs  Lexer.hs  Types.hs
lib/fine-types/src/Language/FineTypes/Signature/: Gen.hs  Parser.hs  PrettyPrinter.hs
lib/fine-types/src/Language/FineTypes/Typ/: Gen.hs  Parser.hs  PrettyPrinter.hs
lib/fine-types/src/Language/FineTypes/Typ/Rewrite/: Constraints.hs  Maps.hs
lib/fine-types/src/Language/FineTypes/Value/: Gen.hs
lib/fine-types/test/Language/FineTypes/: EmbeddingSpec.hs  PackageSpec.hs  ParserSpec.hs  TypSpec.hs  ValueSpec.hs
lib/fine-types/test/Language/FineTypes/Cardano/Ledger/: AllegraSpec.hs  AlonzoSpec.hs  BabbageSpec.hs  Common.hs  MarySpec.hs  ShelleySpec.hs
lib/fine-types/test/Language/FineTypes/Export/Haskell/: ValueSpec.hs
lib/fine-types/test/Language/FineTypes/Export/OpenAPI/: SchemaSpec.hs  TypSpec.hs  ValueSpec.hs
lib/fine-types/test/Language/FineTypes/Signature/: ParserSpec.hs
lib/fine-types/test/data/: DocumentationTest.fine  HaskellUTxO.fine  JsonUTxO.fine  PackageTest.fine  ParseTestBabbage.fine
lib/fine-types/test/data/Cardano/Ledger/: Allegra.fine  Mary.fine
lib/fine-types/test/data/Cardano/Ledger/Allegra/: Block.fine  Delegation.fine  Script.fine  Tx.fine
lib/fine-types/test/data/Cardano/Ledger/Alonzo/: CostModel.fine
lib/fine-types/test/data/Cardano/Ledger/Babbage/: Crypto.fine  Delegation.fine  PParams.fine  Script.fine
lib/fine-types/test/data/Cardano/Ledger/Mary/: Address.fine  Tx.fine
lib/fine-types/test/data/Cardano/Ledger/Shelley/: Address.fine  Block.fine  Crypto.fine  Delegation.fine  PParams.fine  Script.fine  Tx.fine
lib/fine-types/test/data/Cardano/Ledger/Specs/: Alonzo.fine  Babbage.fine
lib/fine-types/test/data/package/: P1.fine  P2.fine  S.fine  X.fine  Y.fine  Z.fine
lib/fine-types/test/data/package/failure/: FailToAddModuleDuplicatedImports.pkg.fine  FailToAddModuleImportNotInScope.pkg.fine  FailToAddModuleModuleAlreadyInScope.pkg.fine  FailToAddModuleNameMismatch.pkg.fine  FailToAddModuleNamesNotInScope.pkg.fine  FailToCompileAnInclude.pkg.fine  FailToCompileAnInclude2.pkg.fine  FailToCompileAnIncludeNamesNotInScope.pkg.fine  FailToInclude.pkg.fine  FailToIncludeWithNameMismatch.pkg.fine  FailToParseAnImport.pkg.fine  FailToParseAnInclude.pkg.fine
lib/fine-types/test/data/signature/: TxAbstract.fine
(+134 files in other folders)
