cabal-version:      3.4
build-type:         Custom
name:               deposit-wallet-mock
version:            0.1.0.0
synopsis:           Mock deposit wallet
homepage:           https://github.com/cardano-foundation/fine-types
license:            Apache-2.0
license-file:       LICENSE
author:             HAL, Cardano Foundation
maintainer:         hal@cardanofoundation.org
copyright:          2023 Cardano Foundation
category:           Language

extra-source-files:
  src/**/*.fine

custom-setup
  setup-depends:
    , base >=4.14.3.0
    , Cabal >= 3.0 && < 4
    , directory
    , filepath
    , fine-types

common language
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
  other-extensions:
    NamedFieldPuns
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:      language, opts-lib
  hs-source-dirs:
    src
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , filepath
    , fine-types
    , text
    , servant
    , servant-server
    , wai
  exposed-modules:
    Cardano.Wallet.Deposit.HTTP
    Cardano.Wallet.Deposit.HTTP.Types.API
    Cardano.Wallet.Deposit.HTTP.Types.JSON
    Servant.FineTypes
  autogen-modules:
    Cardano.Wallet.Deposit.HTTP.Types.JSON

executable deposit-wallet
  import:      language, opts-exe
  hs-source-dirs:
    exe
  build-depends:
    , base
    , deposit-wallet-mock
    , wai
    , warp
  main-is:
    deposit-wallet.hs
