cabal-version:      3.0
name:               fine-types-core
version:            0.1.0.0
synopsis:           A interface description language (IDL) focusing on types
description:        Core definitions and proofs for fine-types.
homepage:           https://github.com/cardano-foundation/fine-types
license:            Apache-2.0
license-file:       LICENSE
author:             HAL, Cardano Foundation
maintainer:         hal@cardanofoundation.org
copyright:          2023 Cardano Foundation
category:           Language

extra-doc-files:
  CHANGELOG.md
extra-source-files:
  generate-haskell.sh
  fine-types-core.agda-lib
  src/agda/**/*.agda

common language
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
  other-extensions:
    NamedFieldPuns
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:      language, opts-lib
  hs-source-dirs:
    src/haskell
  build-depends:
    , base >=4.14.3.0
    , containers
    , deepseq >= 1.4.4
    , QuickCheck
  exposed-modules:
    Data.Embedding
    Language.FineTypes
    Language.FineTypes.Embedding
    Language.FineTypes.Typ
    Language.FineTypes.Value.Def
    Language.FineTypes.Value.Typcheck
