cabal-version:      3.0
name:               fine-types
version:            0.1.0.0
synopsis:           A interface description language (IDL) focusing on types
description:        Please see README.md
homepage:           https://github.com/cardano-foundation/fine-types
license:            Apache-2.0
license-file:       LICENSE
author:             HAL, Cardano Foundation
maintainer:         hal@cardanofoundation.org
copyright:          2023 Cardano Foundation
category:           Language

extra-doc-files:
  CHANGELOG.md
  README.md
extra-source-files:
  test/data/**/*.fine

common language
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
  other-extensions:
    NamedFieldPuns
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:      language, opts-lib
  hs-source-dirs:
    src
  build-depends:
    , aeson ^>= 2.1.2
    , base >=4.14.3.0
    , base16 >= 1.0
    , bytestring
    , containers
    , deepseq >= 1.4.4
    , megaparsec ^>= 9.2.1
    , parser-combinators
    , pretty-simple
    , prettyprinter
    , QuickCheck
    , text
    , transformers
    , tree-diff
    , yaml
  exposed-modules:
    Language.FineTypes
    Language.FineTypes.Export.OpenAPI.Typ
    Language.FineTypes.Export.OpenAPI.Value
    Language.FineTypes.Module
    Language.FineTypes.Module.Gen
    Language.FineTypes.Module.PrettyPrinter
    Language.FineTypes.Parser
    Language.FineTypes.Typ
    Language.FineTypes.Typ.Gen
    Language.FineTypes.Value
    Language.FineTypes.Value.Gen

test-suite unit
  import:      language, opts-exe
  type:        exitcode-stdio-1.0
  hs-source-dirs:
    test
  build-tool-depends:
    hspec-discover:hspec-discover == 2.*
  build-depends:
    , base
    , containers
    , deepseq
    , fine-types
    , hspec ^>= 2.11.0
    , pretty-simple
    , QuickCheck
    , tree-diff
  main-is:
    Spec.hs
  other-modules:
    Language.FineTypes.Export.OpenAPI.TypSpec
    Language.FineTypes.Cardano.Ledger.ShelleySpec
    Language.FineTypes.ParserSpec
    Language.FineTypes.ValueSpec
