cabal-version:      3.0
name:               fine-types
version:            0.1.0.0
synopsis:           A interface description language (IDL) focusing on types
description:        Please see README.md
homepage:           https://github.com/cardano-foundation/fine-types
license:            Apache-2.0
license-file:       LICENSE
author:             HAL, Cardano Foundation
maintainer:         hal@cardanofoundation.org
copyright:          2023 Cardano Foundation
category:           Language

extra-doc-files:
  CHANGELOG.md
  README.md
extra-source-files:
  test/data/**/*.fine

common language
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
  other-extensions:
    NamedFieldPuns
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:      language, opts-lib
  hs-source-dirs:
    src
  build-depends:
    , aeson ^>= 2.1.2
    , aeson-pretty
    , base >=4.14.3.0
    , base16 >= 1.0
    , bytestring
    , Cabal >= 3.8.1 && < 4
    , containers
    , contra-tracer
    , deepseq >= 1.4.4
    , directory
    , filepath >= 1.4.2
    , haskell-src-exts ^>= 1.23.1
    , haskell-src-exts-simple ^>= 1.23.0
    , insert-ordered-containers
    , megaparsec ^>= 9.2.1
    , openapi3
    , parser-combinators
    , pretty-simple
    , prettyprinter
    , QuickCheck
    , QuickCheck-GenT
    , text
    , transformers
    , tree-diff
    , yaml
  exposed-modules:
    Language.FineTypes
    Language.FineTypes.Commands.Check
    Language.FineTypes.Commands.Check.PrettyPrinter
    Language.FineTypes.Commands.Common
    Language.FineTypes.Commands.Convert
    Language.FineTypes.Commands.Convert.Haskell.Cabal
    Language.FineTypes.Commands.Lint
    Language.FineTypes.Commands.Log
    Language.FineTypes.Documentation
    Language.FineTypes.Documentation.Gen
    Language.FineTypes.Documentation.Parser
    Language.FineTypes.Export.Haskell.Language
    Language.FineTypes.Export.Haskell.Typ
    Language.FineTypes.Export.Haskell.Value.Compiletime
    Language.FineTypes.Export.Haskell.Value.Runtime
    Language.FineTypes.Export.OpenAPI.Schema
    Language.FineTypes.Export.OpenAPI.Value.FromJSON
    Language.FineTypes.Export.OpenAPI.Value.ToJSON
    Language.FineTypes.Module
    Language.FineTypes.Module.Gen
    Language.FineTypes.Module.Identity
    Language.FineTypes.Module.Parser
    Language.FineTypes.Module.PrettyPrinter
    Language.FineTypes.Package
    Language.FineTypes.Parser.Common
    Language.FineTypes.Parser.Lexer
    Language.FineTypes.Parser.Types
    Language.FineTypes.Signature
    Language.FineTypes.Signature.Gen
    Language.FineTypes.Signature.Parser
    Language.FineTypes.Signature.PrettyPrinter
    Language.FineTypes.Typ
    Language.FineTypes.Typ.Gen
    Language.FineTypes.Typ.Parser
    Language.FineTypes.Typ.PrettyPrinter
    Language.FineTypes.Value
    Language.FineTypes.Value.Gen
  other-modules:
    Language.FineTypes.Package.Compile
    Language.FineTypes.Package.Content
    Language.FineTypes.Package.Description
    Language.FineTypes.Package.Parser
    Language.FineTypes.ToExpr


test-suite unit
  import:      language, opts-exe
  type:        exitcode-stdio-1.0
  hs-source-dirs:
    test
  build-tool-depends:
    hspec-discover:hspec-discover == 2.*
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , deepseq
    , filepath
    , fine-types
    , hspec ^>= 2.11.0
    , HUnit
    , megaparsec
    , openapi3
    , pretty
    , pretty-simple
    , QuickCheck
    , text
    , tree-diff
  main-is:
    Spec.hs
  other-modules:
    Language.FineTypes.Export.Haskell.ValueSpec
    Language.FineTypes.Export.OpenAPI.SchemaSpec
    Language.FineTypes.Export.OpenAPI.ValueSpec
    Language.FineTypes.PackageSpec
    Language.FineTypes.ParserSpec
    Language.FineTypes.Signature.ParserSpec
    Language.FineTypes.ValueSpec

executable fine-types
  import:      language, opts-exe
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , aeson-pretty
    , base
    , bytestring
    , containers
    , contra-tracer
    , fine-types
    , megaparsec
    , optparse-applicative
    , transformers
    , fine-types
    , prettyprinter
    , with-utf8
    , yaml
  other-modules:
    Options
    Options.Check
    Options.Common
    Options.Convert
    Options.Lint
    Options.Log
